--- a/doc/html/_static/triqs2.css
+++ b/doc/html/_static/triqs2.css
@@ -2667,7 +2667,7 @@ a:hover {
   padding-right: 4rem;
   padding-left: 4rem;
   max-width: 1820px;
-  width: calc(100% - 300px);
+  width: calc(100% - (300px + $flexboxgrid-outer-margin));
 }
 
 .bodywrapper {
